added release and _layouts as git submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,11 @@
 	path = assets
 	url = https://github.com/Ontotext-AD/doc-resources.git
 	branch = assets
+[submodule "release"]
+	path = release
+	url = https://github.com/Ontotext-AD/doc-resources.git
+	branch = release
+[submodule "layouts"]
+	path = _layouts
+	url = https://github.com/Ontotext-AD/doc-resources.git
+	branch = _layouts
